# newsletter-tool

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: auth.py  billing.py  cli.py  db.py  digest.py  env.py  main.py  newsletter.py  rss.py  scheduler.py  user_actions.py
app/fetch/: client.py  estimate.py  runner.py
app/static/: carousel.js  home.js  landing.css  landing.js  site.webmanifest
app/templates/: _tweet_macros.html  account.html  base.html  digest.html  edition.html  home.html  landing.html  login.html  settings.html
docs/: ARCHITECTURE.md  KNOWLEDGE.md
scaffold/: ARCH-HUMAN.md  ARCH-LLM.md  PROJECT-KNOWLEDGE.md
scaffold/archive/: KNOWLEDGE.md
scripts/: setup.sh
tests/: conftest.py  test_auth.py  test_billing.py  test_billing_routes.py  test_carousel.py  test_cli.py  test_db.py  test_digest.py  test_env.py  test_estimate.py  test_fetch.py  test_newsletter.py  test_rss.py  test_scheduler.py  test_setup.py  test_user_actions.py  test_web.py
