[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "newsletter-tool"
version = "0.1.0"
description = "Personal tool that turns selected X accounts into weekly digests"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn==0.34.0",
  "jinja2==3.1.5",
  "httpx==0.28.1",
  "apscheduler==3.11.0",
  "python-multipart==0.0.20",
  "python-dotenv==1.0.1",
  "itsdangerous==2.2.0",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4"]

[project.scripts]
news-dev = "app.cli:dev"
news-fetch = "app.cli:fetch"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
